Fixing layout problems

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ label {
 }
 
 .show-code {
-    height: 300px;
+    height: 160px;
 }
 
 .col-example {
